css background images fix, hopefully

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <ul class='navlinks'>
                 <li><a href='#'>Home</a></li>
-                <li><a href='/contact.html'>Contact</a></li>
+                <li><a href='#/contact.html'>Contact</a></li>
             </ul>
         </nav>
         <section class='banner-container'>
@@ -35,7 +35,7 @@
                 </ul>
             </div>
             <div class='carousel-container'>
-                <img class='carousel-indicator left' src='images/left.svg'/>
+                <img class='carousel-indicator left' src='./images/left.svg'/>
 
                 <div class='carousel-track'>
                 <div class='carousel-item one hide'>
