I need to learn why the root directory on github doesnt work like I thought it id.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <h5 class='badge'>Electric<br/>Boogaloo<br/>Car<br/>Dealership</h5>
             </div>
             <ul class='navlinks'>
-                <li><a href='#'>Home</a></li>
-                <li><a href='/contact.html'>Contact</a></li>
+                <li><a href='https://chrismenkhus.github.io/EBCD/'>Home</a></li>
+                <li><a href='https://chrismenkhus.github.io/EBCD/contact.html'>Contact</a></li>
             </ul>
         </nav>
         <section class='banner-container'>
