fixed the begining of the urls

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h5 class='badge'>Electric<br/>Boogaloo<br/>Car<br/>Dealership</h5>
             </div>
             <ul class='navlinks'>
-                <li><a href='/'>Home</a></li>
+                <li><a href=''>Home</a></li>
                 <li><a href='contact.html'>Contact</a></li>
             </ul>
         </nav>
