added social and location

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <header>
         <nav class='navbar-container'>
             <div class='navinfo'>
-                <h1 class='logo'>EBCD</h1>
+                <h1 class='logo'><a href='../index.html'>EBCD</a></h1>
                 <h5 class='badge'>Electric<br/>Boogaloo<br/>Car<br/>Dealership</h5>
             </div>
             <ul class='navlinks'>
@@ -31,7 +31,7 @@
                 <h2 class='hours'><span>open </span>10am<br/><span>close </span>8pm</h2>
                 <p class='kindtext'>Interested in an Electric Boogaloo?
                     Contact sales to book an appointment.</p>
-                <p class='emoji'>🤙</p>
+                <p class='emoji'>💳</p>
                 <!-- <img src='/images/call-outline.svg'/> -->
                 <div class='contact-button'><img src='../images/call-outline.svg'/><span class='number'>555-555-5555</span></div>
             </div>
@@ -40,12 +40,35 @@
                 <h2 class='hours'><span>open </span>24/7</h2>
                 <p class='kindtext'>Need to reschedule a payment or schedule a car service appointment? 
                     Contact Customer Service now.</p>
-                <p class='emoji'>🤙</p>
+                <p class='emoji'>ℹ️</p>
                 <!-- <img src='/images/call-outline.svg'/> -->
                 <div class='contact-button'><img src='../images/call-outline.svg'/><span class='number'>555-555-5555</span></div>
             </div>
         </section>
+
+        
+
+        <section class='infobox-container'> 
+            <div class='infobox'>
+                <h1 class='label'>Visit Us IRL</h1>
+                <h2 class='hours'><span>open </span>10am<br/><span>close </span>8pm</h2>
+                <p class='kindtext'> Come see us in person and test drive your next car today.</p>
+                <p class='emoji'>😷</p>
+                <!-- <img src='/images/call-outline.svg'/> -->
+                <p class='  secondarycolor'>5555 Pennsylvania Avenue, 5555.</p>
+                <p class='warningtext'>Maks are required by all employees and guests. Thank you for your understanding.</p>
+
+
+            </div>
+
+            <div class='infobox'>
+                <div class='map'>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3076.9776092598604!2d-119.44123374903808!3d39.53755911645928!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80991fc240ba30b9%3A0x7e66b0fa4fe55cd8!2sTesla%20Gigafactory!5e0!3m2!1sen!2sus!4v1596411036565!5m2!1sen!2sus" width="auto" height="380px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>           
+                </div>
+                
+            </div>
+        </section>
     </main>
 </body>
-<script src='script.js' type='module'></script>
+
 </html>
