--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
                 <h5 class='badge'>Electric<br/>Boogaloo<br/>Car<br/>Dealership</h5>
             </div>
             <ul class='navlinks'>
-                <li><a href='../index.html'>Home</a></li>
+                <li><a href='/'>Home</a></li>
                 <li><a href='#'>Contact</a></li>
             </ul>
         </nav>
@@ -33,7 +33,7 @@
                     Contact sales to book an appointment.</p>
                 <p class='emoji'>💳</p>
                 <!-- <img src='/images/call-outline.svg'/> -->
-                <div class='contact-button'><img src='../images/call-outline.svg'/><span class='number'>555-555-5555</span></div>
+                <div class='contact-button'><img src='./images/call-outline.svg'/><span class='number'>555-555-5555</span></div>
             </div>
             <div class='infobox'>
                 <h1 class='label'>Contact Support</h1>
@@ -42,7 +42,7 @@
                     Contact Customer Service now.</p>
                 <p class='emoji'>ℹ️</p>
                 <!-- <img src='/images/call-outline.svg'/> -->
-                <div class='contact-button'><img src='../images/call-outline.svg'/><span class='number'>555-555-5555</span></div>
+                <div class='contact-button'><img src='./images/call-outline.svg'/><span class='number'>555-555-5555</span></div>
             </div>
         </section>
 
