--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class='navbar-container'>
             <div class='navinfo'>
-                <h1 class='logo'><a href='../index.html'>EBCD</a></h1>
+                <h1 class='logo'><a href='/EBCD'>EBCD</a></h1>
                 <h5 class='badge'>Electric<br/>Boogaloo<br/>Car<br/>Dealership</h5>
             </div>
             <ul class='navlinks'>
